src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/ValidValidateTemplates/ValidUnmatchedTemplate3.liquid
{% validate "TestSchema3.json" -%}
{
    "resourceType": "{{ msg.resourceType }}"
}
{% endvalidate -%}
