src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/InvalidValidateTemplates/InvalidNoneJsonContent.liquid
{% validate "TestSchema.json" -%}
"invalidJsonBlock"
{% endvalidate -%}
